<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo11">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FAQ">

        <include layout="@layout/toolbar" />

        <TextView
            android:id="@+id/q1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/first_ques"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:fontFamily="@font/chewy"
            app:layout_constraintBottom_toTopOf="@+id/a1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

        <TextView
            android:id="@+id/a1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/first_ans"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:fontFamily="@font/chewy"
            app:layout_constraintBottom_toTopOf="@+id/q2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/q1" />

        <TextView
            android:id="@+id/q2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/second_ques"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:fontFamily="@font/chewy"
            app:layout_constraintBottom_toTopOf="@+id/a2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a1" />

        <TextView
            android:id="@+id/a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/second_ans"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:visibility="visible"
            app:fontFamily="@font/chewy"
            app:layout_constraintBottom_toTopOf="@+id/q3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q2" />

        <TextView
            android:id="@+id/q3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/third_ques"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="@font/chewy"
            app:layout_constraintBottom_toTopOf="@+id/a3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/a2" />

        <TextView
            android:id="@+id/a3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/third_ans"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:fontFamily="@font/chewy"
            app:layout_constraintBottom_toTopOf="@+id/q4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/q3" />

        <TextView
            android:id="@+id/q4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fourth_ques"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="@font/chewy"
            app:layout_constraintBottom_toTopOf="@id/a4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/a3" />

        <TextView
            android:id="@+id/a4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fourth_ans"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="@font/chewy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q4" />



    </android.support.constraint.ConstraintLayout>
</ScrollView>
