<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@drawable/logo11"
    tools:context=".ChooseDeviceActivity">

    <include layout="@layout/toolbar"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="348dp" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="199dp" />

    <TextView
        android:id="@+id/mobile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="137dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openMobile"
        android:text="@string/mobile_text"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:fontFamily="@font/chewy"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guidline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/laptop_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="137dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openLaptop"
        android:text="@string/labtop_text"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="@font/chewy"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guidline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tablet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="137dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openTablet"
        android:text="@string/tablet_text"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:fontFamily="@font/chewy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guidline" />

    <TextView
        android:id="@+id/others_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="137dp"
        android:focusable="auto"
        android:onClick="openOthers"
        android:text="@string/other_text"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:fontFamily="@font/chewy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guidline" />
</android.support.constraint.ConstraintLayout>